--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "require": {
         "php": ">=7.3.0",
         "ext-json": "*",
+        "ext-openssl": "*",
         "illuminate/contracts": "5.8.*|^6.0",
-        "illuminate/support": "5.8.*|^6.0"
+        "illuminate/support": "5.8.*|^6.0",
+        "ramsey/uuid": "^3.8"
     },
     "autoload": {
         "psr-4": {
