--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-openssl": "*",
         "illuminate/contracts": "5.8.*|^6.0",
         "illuminate/support": "5.8.*|^6.0",
+        "laravel/framework": "5.8.*|^6.0",
         "ramsey/uuid": "^3.8"
     },
     "autoload": {
