--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/contracts": "^7.0",
         "illuminate/support": "^7.0",
         "laravel/framework": "^7.0",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3 || ^4"
     },
     "autoload": {
         "psr-4": {
