--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "php": ">=7.3.0",
         "ext-json": "*",
         "ext-openssl": "*",
-        "illuminate/contracts": "^7.0",
-        "illuminate/support": "^7.0",
-        "laravel/framework": "^7.0",
-        "ramsey/uuid": "^3 || ^4"
+        "illuminate/contracts": "^7.0 | ^8.0",
+        "illuminate/support": "^7.0 | ^8.0",
+        "laravel/framework": "^7.0 | ^8.0",
+        "ramsey/uuid": "^4"
     },
     "autoload": {
         "psr-4": {
