--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "php": ">=8.1",
         "ext-json": "*",
         "ext-openssl": "*",
-        "illuminate/contracts": "^10.0",
-        "illuminate/support": "^10.0",
-        "laravel/framework": "^10.0",
+        "illuminate/contracts": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
+        "laravel/framework": "^9.0|^10.0",
         "ramsey/uuid": "^4.7",
       "ext-pdo": "*"
     },
