--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-json": "*",
         "ext-openssl": "*",
-        "illuminate/contracts": "^9.0|^10.0",
-        "illuminate/support": "^9.0|^10.0",
-        "laravel/framework": "^9.0|^10.0",
+        "laravel/framework": "^11.0",
         "ramsey/uuid": "^4.7",
       "ext-pdo": "*"
     },
